<resources>
    <string name="app_name">Incomes and Expenses</string>
    <string name="event">Event</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="history">History:</string>
    <string name="action_settings">Settings</string>
    <string name="title_add_event_activity">AddEventActivity</string>
    <string name="expense">Expense</string>
    <string-array name="categoriesExpenses">
        <item>Food</item>
        <item>Entertainments</item>
        <item>Rent</item>
        <item>Sluts</item>
    </string-array>
    <string-array name="categoriesIncomes">
        <item>Job</item>
        <item>Part-time job</item>
        <item>Rent income</item>
        <item>Dividends</item>
    </string-array>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
</resources>