<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/etEvent"
        android:hint="@string/event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:minLines="4"
        android:gravity="start"
        android:maxLines="6"
        android:scrollbars="vertical">
    </EditText>

    <EditText
        android:id="@+id/etIncomeExpense"
        android:hint="@string/income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal">
    </EditText>

    <Spinner
        android:id="@+id/sCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categoriesIncomes"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>
